# articulated_vehicle

./: README.md  ReadMe.md  link_states.txt  model_states.txt
devel/: .catkin
devel/include/mpc_node/: mpc_dynamicConfig.h
devel/include/pid/: PidConfig.h  wheel_vel.h
devel/lib/pid/: Manual_control  autotune  controller  nav_sim  odom_pub  plant_sim  servo_commands  setpoint_node  showpath  sim_time
devel/lib/pkgconfig/: mpc_node.pc  mrobot_bringup.pc  mrobot_description.pc  mrobot_navigation.pc  pid.pc  vinyson_joystick.pc
devel/lib/python3/dist-packages/mpc_node/cfg/: mpc_dynamicConfig.py
devel/lib/python3/dist-packages/pid/cfg/: PidConfig.py
devel/lib/python3/dist-packages/pid/msg/: __init__.py  _wheel_vel.py
devel/lib/vinyson_joystick/: auto_goal  vinyson_driver
devel/share/common-lisp/ros/pid/msg/: _package.lisp  _package_wheel_vel.lisp  pid-msg.asd  wheel_vel.lisp
devel/share/gennodejs/ros/pid/msg/: _index.js  wheel_vel.js
devel/share/mpc_node/cmake/: mpc_nodeConfig.cmake
devel/share/mpc_node/docs/: mpc_dynamicConfig-usage.dox  mpc_dynamicConfig.dox  mpc_dynamicConfig.wikidoc
devel/share/mrobot_bringup/cmake/: mrobot_bringupConfig.cmake
devel/share/mrobot_description/cmake/: mrobot_descriptionConfig.cmake
devel/share/mrobot_navigation/cmake/: mrobot_navigationConfig.cmake
devel/share/pid/cmake/: pid-msg-paths.cmake  pidConfig.cmake
devel/share/pid/docs/: PidConfig-usage.dox  PidConfig.dox  PidConfig.wikidoc
devel/share/roseus/ros/pid/: manifest.l
devel/share/roseus/ros/pid/msg/: wheel_vel.l
devel/share/vinyson_joystick/cmake/: vinyson_joystickConfig.cmake
src/mrobot_bringup/: CMakeLists.txt  package.xml
src/mrobot_bringup/launch/: robot_spawn.launch  vinyson_joy_start.launch
src/mrobot_bringup/launch/include/: mrobot.launch.xml
src/mrobot_bringup/rviz/: slam.rviz  xbot_urdf.rviz
src/mrobot_controller/mpc_node/include/: MPC.h
src/mrobot_controller/mpc_node/launch/: mpc_start.launch
src/mrobot_controller/mpc_node/src/: MPC_Node.cpp
src/mrobot_controller/pid/: CMakeLists.txt  package.xml
src/mrobot_controller/pid/include/pid/: odom_cul.h
src/mrobot_controller/pid/launch/: differential_drive_sim.launch  servo_sim.launch
src/mrobot_controller/pid/src/: nav_sim.cpp  servo_commands.cpp
src/mrobot_controller/pid/src/odom_pub/: gazebo_odom.cpp  odom_cul.cpp  odom_pub.cpp
src/mrobot_controller/pid/src/something_others/: plant_sim.cpp
src/mrobot_controller/vinyson_joystick/: CMakeLists.txt
src/mrobot_controller/vinyson_joystick/launch/: vinyson_joy_start.launch
src/mrobot_controller/vinyson_joystick/scripts/: mrobot_teleop.py
src/mrobot_controller/vinyson_joystick/src/: auto_goal.cpp  vinyson_driver.cpp
src/mrobot_description/: CMakeLists.txt
src/mrobot_description/launch/: robot_spawn.launch
src/mrobot_description/launch/include/: mrobot.launch.xml
src/mrobot_description/scripts/: nav_sim.py
src/mrobot_description/urdf/: HDL-32E.urdf.xacro  urobot.urdf.xacro
src/mrobot_navigation/launch/: amcl_nav.launch  mpc_nav.launch  mrobot_amcl.launch  mrobot_gmapping.launch  mrobot_movebase.launch
src/mrobot_navigation/maps/: gmapping.pgm  gmapping.yaml
src/mrobot_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/mrobot_navigation/rviz/: urdf.rviz
